RESOLVED FIXED231812
CSS Animations creation and sorting is incorrect and may lead to crash
https://bugs.webkit.org/show_bug.cgi?id=231812
Summary CSS Animations creation and sorting is incorrect and may lead to crash
Antoine Quint
Reported 2021-10-15 09:52:31 PDT
CSS Animations creation and sorting is incorrect and may lead to crash
Attachments
Patch (11.05 KB, patch)
2021-10-15 10:06 PDT, Antoine Quint
dino: review+
ews-feeder: commit-queue-
Antoine Quint
Comment 1 2021-10-15 10:06:18 PDT
Antoine Quint
Comment 2 2021-10-15 10:06:24 PDT
Antoine Quint
Comment 3 2021-10-16 03:16:43 PDT
Note You need to log in before you can comment on or make changes to this bug.